fix date and time refence

--- a/create-class.html
+++ b/create-class.html
@@ -48,12 +48,13 @@
                         <input type="text" id="classTopic" placeholder="e.g. Calculus Basics">
                     </div>
                     <div class="input-group">
-                        <label><i class="fas fa-calendar"></i> Date</label>
-                        <input type="date" id="classDate">
+                        <label for="classDate"><i class="fas fa-calendar"></i> Scheduled Date</label>
+                        <input type="date" id="classDate" required>
                     </div>
+
                     <div class="input-group">
-                        <label><i class="fas fa-clock"></i> Start Time</label>
-                        <input type="time" id="classTime">
+                        <label for="classTime"><i class="fas fa-clock"></i> Scheduled Time</label>
+                        <input type="time" id="classTime" required>
                     </div>
                     <div class="input-group">
                         <label for="classGrade"><i class="fas fa-graduation-cap"></i> Select Grade</label>
