fix hero section adjustment and go live button

--- a/student-portal.html
+++ b/student-portal.html
@@ -37,6 +37,7 @@
     </nav>
 
     <!-- Hero Section -->
+    <!-- Hero Section -->
     <section class="hero-section">
         <div class="hero-container">
             <div class="hero-content animate__animated animate__fadeInLeft">
