--- a/student-view.html
+++ b/student-view.html
@@ -115,6 +115,55 @@
                 opacity: 1;
             }
         }
+
+        /* Add these to your existing student-view.html style section */
+
+        .btn-upcoming {
+            background: linear-gradient(135deg, #f59e0b, #d97706);
+            color: #000;
+            border: none;
+            padding: 12px;
+            border-radius: 10px;
+            font-weight: bold;
+            cursor: not-allowed;
+            transition: 0.3s;
+            margin-top: 15px;
+            width: 100%;
+            opacity: 0.9;
+        }
+
+        .upcoming-badge {
+            position: absolute;
+            top: 15px;
+            right: 15px;
+            background: #f59e0b;
+            color: #000;
+            padding: 4px 10px;
+            border-radius: 12px;
+            font-size: 0.75rem;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+            gap: 5px;
+        }
+
+        .class-footer {
+            margin-top: 15px;
+            padding-top: 15px;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .class-header {
+            margin-bottom: 20px;
+        }
+
+        .class-info {
+            margin: 20px 0;
+        }
+
+        .class-info .info-row {
+            margin-bottom: 12px;
+        }
     </style>
 </head>
 
