fix show all classes available

--- a/student-portal.html
+++ b/student-portal.html
@@ -100,7 +100,7 @@
                         </div>
                     </div>
 
-                    <div class="feature-card" onclick="openStudyMaterials()">
+                    <div class="feature-card" onclick="window.location.href='resources.html'">
                         <div class="feature-icon-wrapper">
                             <div class="feature-icon">
                                 <i class="fas fa-book-open"></i>
@@ -131,7 +131,7 @@
                     <p class="section-description">Learn together with peers and mentors</p>
                 </div>
                 <div class="features-grid">
-                    <div class="feature-card" onclick="openStudyGroups()">
+                    <div class="feature-card" onclick="window.location.href='forum.html'">
                         <div class="feature-icon-wrapper">
                             <div class="feature-icon">
                                 <i class="fas fa-user-friends"></i>
